2020-10-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix a z80 --reserve-regs-iy regression test failure.

2020-10-04 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated file via autoheader to pick up r2ka port.

2020-10-03 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.common.in:
	  Fix bug #3122.
	* src/z80/gen.c:
	  Improve use of ld d(ix), hl and ld hl, d(ix) for Rabbits.

2020-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fix use of mul for 16-bit multiplication by constant for r2k vs. r2ka.
	* support/scripts/sdcc.nsi:
	  Fix r2ka library Windows installation.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* Makefile.in,
	  configure,
	  configure.ac,
	  device/lib/Makefile.in,
	  device/lib/r2ka,
	  device/lib/atomic_flag_clear.c,
	  device/include/Makefile.in,
	  device/include/*.h
	  src/SDCCmain.c,
	  src/port.h,
	  src/z80/main.c,
	  src/z80/z80.h,
	  support/regression/Makefile.in,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/ports/ucr2ka,
	  support/regression/tests/*.c,
	  doc/sdccman.lyx,
	  r2ka port to better support Rabbit 2000A, 2000B, 2000C, 3000. RFE #709.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/main.c,
	  device/lib/r3ka/mulchar.s,
	  device/lib/r3ka/Makefile.in:
	  Use mul for r3ka, RFE #372.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  src/z80/peeph.def,
	  src/z80/peeph-r2k.def,
	  src/SDCCval.h,
	  src/SDCCval.c:
	  Small improvements for z80 and related.

2020-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve speed of r2k builtins.
	* src/SDCCast.c:
	  Optimize strcpy on Rabbits.
	* src/port.h:
	  Prepare for r2ka port.

2020-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve use of Rabbit instructions.

2020-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  device/lib/r2k/crt0.s,
	  src/SDCCgen.h,
	  src/SDCCgen.c,