@@ -1,6 +1,14 @@
 2020-10-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/gen.c:
+	  Improve register-to-stack copy.
+	* sim/ucsim/z80.src/z80mac.h,
+	  sim/ucsim/z80.src/inst_r2k.cc:
+	  Fix handling of offset in sp-relative addressing.
+
+2020-10-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
 	  Fix a z80 --reserve-regs-iy regression test failure.
 
 2020-10-04 Philipp Klaus Krause <pkk AT spth.de>
